# faker_credit_score

./: .codacy.yml  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.rst  RELEASING.rst  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
faker_credit_score/: __init__.py  __version__.py  _version.py
test/: test.py
tests/: test_faker_credit_score.py
